# SS_RLD

./: .gitignore  README.md  pyproject.toml
data/: AF700_740bp_0001.hdf5:Zone.Identifier
src/SS_RLD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ss/: main.py  utils.py
